# hugill

./: .gitignore  .lefthook.yml  CHANGELOG.md  README.md  biome.jsonc  index.html  lefthook.yml  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
src/: App.svelte  app.html  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  watcher.rs
src/lib/: RemotePathDialog.svelte
src/routes/: +layout.ts  +page.svelte
